--- a/views/user/userprofile.ejs
+++ b/views/user/userprofile.ejs
@@ -51,13 +51,13 @@
                     <div class="border-t border-gray-200 pt-4">
                         <ul class="space-y-4">
                             <li>
-                                <a href="#" class="flex items-center text-indigo-600 font-medium">
+                                <a href="/user-Profile" class="flex items-center text-indigo-600 font-medium">
                                     <i class="fas fa-user mr-3 w-5 text-gray-600"></i>
                                     <span>Profile Information</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="flex items-center text-gray-700 hover:text-indigo-600">
+                                <a href="/order-summary" class="flex items-center text-gray-700 hover:text-indigo-600">
                                     <i class="fas fa-shopping-bag mr-3 w-5 text-gray-600"></i>
                                     <span>My Orders</span>
                                 </a>
