--- a/views/admin/productmanagement.ejs
+++ b/views/admin/productmanagement.ejs
@@ -127,7 +127,10 @@
                                         </div>
                                     </td>
                                     <td class="px-6 py-4 whitespace-nowrap">
-                                        <div class="text-sm text-gray-900"><%= product.category.categoryname  %></div>
+                                        <div class="text-sm text-gray-900"
+                                        >
+                                        <%=   %>
+                                    </div>
                                         
                                     </td>
                                     <td class="px-6 py-4 whitespace-nowrap">
