--- a/views/user/productdetails.ejs
+++ b/views/user/productdetails.ejs
@@ -31,19 +31,19 @@
                 <!-- Thumbnail Gallery -->
                 <div class="md:w-1/5 order-2 md:order-1 flex md:flex-col gap-2 mt-4 md:mt-0">
                     <div class="w-full aspect-square border border-gray-200 cursor-pointer p-1 hover:border-yellow-500">
-                        <img src="<%=product.productImage[1]%>" alt="Thumbnail 1" class="w-full h-full object-contain">
+                        <img src="<%=product.productImage[1]?.url%>" alt="Thumbnail 1" class="w-full h-full object-contain">
                     </div>
                     <div class="w-full aspect-square border border-gray-200 cursor-pointer p-1 hover:border-yellow-500">
-                        <img src="<%=product.productImage[2]%>" alt="Thumbnail 2" class="w-full h-full object-contain">
+                        <img src="<%=product.productImage[2]?.url%>" alt="Thumbnail 2" class="w-full h-full object-contain">
                     </div>
                     <div class="w-full aspect-square border border-gray-200 cursor-pointer p-1 hover:border-yellow-500">
-                        <img src="<%=product.productImage[3]%>" alt="Thumbnail 3" class="w-full h-full object-contain">
+                        <img src="<%=product.productImage[3]?.url%>" alt="Thumbnail 3" class="w-full h-full object-contain">
                     </div>
                 </div>
                 
                 <!-- Main Image -->
                 <div class="md:w-4/5 order-1 md:order-2 border border-gray-200 p-2">
-                    <img src="<%=product.productImage[0]%>" alt="<%=product.productName%>" class="w-full h-full object-contain">
+                    <img src="<%=product.productImage[0]?.url%>" alt="<%=product.productName%>" class="w-full h-full object-contain">
                 </div>
             </div>
 
