--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -34,7 +34,7 @@
     <!-- Bottom Nav Links -->
     <nav class="flex justify-center space-x-8 border-t py-2 text-gray-700 font-medium">
       <a href="/" class="hover:text-blue-600 transition">Home</a>
-      <a href="#" class="hover:text-blue-600 transition">Products</a>
+      <a href="/products-user" class="hover:text-blue-600 transition">Products</a>
       <a href="#" class="hover:text-blue-600 transition">About Us</a>
       <a href="#" class="hover:text-blue-600 transition">Help Center</a>
       <a href="/login" class="hover:text-blue-600 transition">Login</a>
