--- a/views/user/products.ejs
+++ b/views/user/products.ejs
@@ -99,7 +99,7 @@
                     <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-lg transition-all">
                         <a href="#">
                             <img onclick="window.location.href = '/productdetails/<%= product._id %>'"
-                                src="<%= product.productImage[0]%>" alt="Product" class="w-full h-40 object-fill p-2 px-4">
+                                src="<%= product.productImage[0]?.url%>" alt="Product" class="w-full h-40 object-fill p-2 px-4">
                             <div class="p-4">
                                 <div class="flex items-center mb-2">
                                     <div class="flex text-yellow-400">
@@ -117,9 +117,11 @@
                                 <p class="text-gray-900 font-bold text-sm">
                                     <%=product.price%>
                                 </p>
-                                <button class="mt-2 w-full text-center bg-gray-200 rounded-full p-1">
-                                    <i class="fas fa-shopping-cart text-xs"></i>
-                                </button>
+                                <a href="/add-to-cart/<%= product._id %>" 
+                                    class="mt-2 w-full text-center bg-purple-600 text-white rounded-full p-2 block">
+                                    <i class="fas fa-shopping-cart text-xs"></i> Add to Cart
+                                </a>
+
                             </div>
                         </a>
                     </div>
