--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -23,7 +23,7 @@
         <a href="#" class="hover:text-blue-600 transition">
           <i class="fas fa-heart text-lg"></i>
         </a>
-        <a href="#" class="hover:text-blue-600 relative transition">
+        <a href="/cart" class="hover:text-blue-600 relative transition">
           <i class="fas fa-shopping-cart text-lg"></i>
           <span
             class="absolute -top-2 -right-2 bg-red-500 text-white text-xs font-semibold rounded-full w-4 h-4 flex items-center justify-center">3</span>
