--- a/views/user/addressmanagement.ejs
+++ b/views/user/addressmanagement.ejs
@@ -23,21 +23,10 @@
                 <div class="bg-white rounded-lg shadow p-6 mb-6">
                     <div class="flex flex-col items-center mb-6">
                         <!-- Profile Image -->
-                        <div class="relative w-20 h-20">
-                            <img id="profile-img" src="/images/default-user.png" alt="Profile"
-                                class="w-20 h-20 rounded-full object-cover border-2 border-gray-300">
-                            <label for="image-input"
-                                class="absolute bottom-0 right-0 bg-blue-500 text-white p-1 rounded-full cursor-pointer text-sm">
-                                ✎
-                            </label>
-                        </div>
                     
                         <input type="file" id="image-input" accept="image/*" class="hidden">
                     
-                        <div class="text-center">
-                            <p class="text-gray-600 mb-1">Hello,</p>
-                            <h2 class="text-xl font-semibold"><%= user.fullname %></h2>
-                        </div>
+        
                     </div>
                     
                     <!-- Image Cropper Modal -->
@@ -132,7 +121,9 @@
 
                     <!-- Buttons -->
                     <div class="flex gap-3 mt-3">
-                        <a href="/set-default-address/<%= a._id %>" class="text-blue-600">Set Default</a>
+                        <% if(!a.isDefault){ %>
+                            <a href="/set-default-address/<%= a._id %>" class="text-blue-600">Set Default</a>
+                        <% } %>
                         <a href="/edit-address-page/<%= a._id %>" class="text-yellow-600">Edit</a>
                         <a href="/delete-address/<%= a._id %>" class="text-red-600">Delete</a>
                     </div>
