--- a/views/user/userprofile.ejs
+++ b/views/user/userprofile.ejs
@@ -23,14 +23,7 @@
                 <div class="bg-white rounded-lg shadow p-6 mb-6">
                     <div class="flex flex-col items-center mb-6">
                         <!-- Profile Image -->
-                        <div class="relative w-20 h-20">
-                            <img id="profile-img" src="/images/default-user.png" alt="Profile"
-                                class="w-20 h-20 rounded-full object-cover border-2 border-gray-300">
-                            <label for="image-input"
-                                class="absolute bottom-0 right-0 bg-blue-500 text-white p-1 rounded-full cursor-pointer text-sm">
-                                ✎
-                            </label>
-                        </div>
+                       
                     
                         <input type="file" id="image-input" accept="image/*" class="hidden">
                     
@@ -93,7 +86,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="flex items-center text-gray-700 hover:text-indigo-600">
+                                <a href="/change-password" class="flex items-center text-gray-700 hover:text-indigo-600">
                                     <i class="fas fa-key mr-3 w-5 text-gray-600"></i>
                                     <span>Change Password</span>
                                 </a>
