--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -43,7 +43,7 @@
                                         <a href="#" class="text-gray-700 hover:text-blue-600">
                                             <i class="fas fa-heart"></i>
                                         </a>
-                                        <a href="#" class="text-gray-700 hover:text-blue-600 relative">
+                                        <a href="/cart" class="text-gray-700 hover:text-blue-600 relative">
                                             <i class="fas fa-shopping-cart"></i>
                                             <span class="absolute -top-2 -right-2 bg-red-500 text-white text-xs rounded-full w-4 h-4 flex items-center justify-center">3</span>
                                         </a>
@@ -153,7 +153,7 @@
                 <div class="bg-white rounded-lg shadow-sm overflow-hidden">
                     <a href="productdetails/<%= product._id %>">
                     <div class="bg-purple-900 h-48 relative">
-                        <img src="<%= product.productImage[0]%>"  onclick="window.location.href = '/productdetails/<%= product._id %>'" alt="Product" class="pointer w-full h-full object-cover">
+                        <img src="<%=  product.productImage[0]?.url%>"  onclick="window.location.href = '/productdetails/<%= product._id %>'" alt="Product" class="pointer w-full h-full object-cover">
                         <div class="absolute  flex items-center justify-center">
                             
                         </div>
@@ -202,7 +202,7 @@
                 <div class="bg-white rounded-lg shadow-sm overflow-hidden">
                     <a href="productdetails/<%= product._id %>">
                     <div class="h-32">
-                        <img src="<%=product.productImage[0]%>" alt="Product" class="w-full h-full object-cover">
+                        <img src="<%=product.productImage[0]?.url%>" alt="Product" class="w-full h-full object-cover">
                     </div>
                 </a>
                     <div class="p-3">
@@ -217,7 +217,6 @@
                     </div>
                 </div>
                 <% })%>
-                <!-- Trending Product 2 -->
                 
             </div>
         </div>
@@ -252,7 +251,7 @@
                 <div class="bg-white rounded-lg shadow-sm overflow-hidden">
                     <a href="productdetails/<%= product._id %>">
                     <div class="h-40">
-                        <img src="<%=product.productImage[0]%>" alt="Product" class="w-full h-full object-cover">
+                        <img src="<%= product.productImage[0]?.url%>" alt="Product" class="w-full h-full object-cover">
                     </div>
                 </a>
                     <div class="p-4">
